--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,8 @@ layout: default
 
       <h1 class="header" itemprop="name">{{ page.title }}</h1>
 
+	  {% include mathjax.html %}
+
       <div class="author">
         <small><i>
           {% if page.author %}
