--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,19 @@
 <nav id="my-menu">
-  <div>
-    <p>{{ site.title }}</p>
+    <div>
+        <p>{{ site.title }}</p>
 
-    <ul class="pages">
-      <li><a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Home</a></li>
-      <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
-      <li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>
-    </ul>
+        <ul class="pages">
+            <li><a href="{{ site.baseurl }}/"><i class="fa fa-home"></i> Home</a></li>
+            <li><a href="{{ site.baseurl }}/posts/"><i class="fa fa-archive"></i> All Posts</a></li>
+            <li><a href="{{ site.baseurl }}/search/"><i class="fa fa-search"></i> Search</a></li>
+            <li><a href="{{ site.baseurl }}/social/"><i class="fa fa-social"></i> Social Topics</a></li>
 
-    {% include social_links.html %}
-  </div>
+<!--            {% for s in site.social %}-->
+<!--            <li><a href="{{ s.url }}">{{ s.title }}</a></li>-->
+<!--            {% endfor %}-->
+        </ul>
+
+        {% include social_links.html %}
+    </div>
 </nav>
 <div class="menu-button" href="#menu"><i class="fa fa-bars"></i></div>
